# ai-ml-predictive-models

./: .env  .env.example  .gitignore  README.md  ai-ml-predictive-models.code-workspace  config.json  decoded_output.csv  index.html  index_20250625.html  index_20250701.html  pyproject.toml  requirements.txt  run_daily_pipeline.bat  run_daily_pipeline.ps1  setup_scheduled_task.ps1
.cache/: team_codes_2025.json
ai-ml-predictive-models/: README.md  config.json  index2 copy.html  mlb_daily_summary.csv  mlb_daily_summary.json
config/: config.yaml  mlb_team_abbrevs.json
data/: team_woba_splits_combined.json
db/: mlb_poc.db
test_output/: build_rfi_websheet.py  mlb_combined_stats_20250619.csv  mlb_combined_stats_20250620.csv  mlb_combined_stats_20250621.csv  mlb_combined_stats_20250623.csv  mlb_combined_stats_20250624.csv  mlb_combined_stats_20250625.csv  mlb_combined_stats_20250626.csv  mlb_daily_game_summary_20250620.csv  mlb_daily_game_summary_20250621.csv  mlb_daily_game_summary_20250621.json  mlb_daily_game_summary_20250623.csv  mlb_daily_game_summary_20250623.json  mlb_daily_game_summary_20250624.csv  mlb_daily_game_summary_20250624.json  mlb_daily_game_summary_20250625.csv  mlb_daily_game_summary_20250625.json  mlb_daily_game_summary_20250626.csv  mlb_daily_game_summary_20250626.json  mlb_daily_game_summary_20250630.json  mlb_daily_game_summary_20250701.json  mlb_daily_game_summary_20250703.json  mlb_daily_stats_20250613.csv  mlb_daily_stats_20250613.json  mlb_daily_stats_20250614.csv  mlb_daily_stats_20250614.json  mlb_daily_stats_20250615.csv  (+24 more)
(+288 files in other folders)
