[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name         = "mlb"
version      = "0.1.0"
dependencies = [
  "requests>=2.0",
  "pandas>=1.0",
]

[project.optional-dependencies]
tests = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["*"]
