[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name         = "mlb"
version      = "0.1.0"
dependencies = [
  "requests>=2.0",
  "pandas>=1.0",
  "scikit-learn",
  "ace_tools",
  "pybaseball (>=2.2.7,<3.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "python-dotenv (>=1.1.1,<2.0.0)",
]

requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
tests = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["*"]

[tool.poetry]
package-mode = false